# echogram

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  biome.json  docker-compose.yml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
api/: app.py  config.py  jobs.py  security.py  shared.py
api/db/: actions.py  client.py  schemas.py
api/routers/: analyzer.py  attachments.py  auth.py  health.py  models.py  user.py
src/: env.mjs  middleware.ts  types.ts
src/actions/ai/: get-emotion.ts  get-sentiment.ts
src/actions/auth/: sign-in.ts
src/actions/messages/: create-message.ts
src/actions/users/: get-user-by-email.ts
src/app/: layout.tsx  page.tsx
src/app/(auth)/login/: page.tsx
src/app/(echo)/[userId]/: page.tsx
src/app/(echo)/space/: page.tsx
src/components/: echo-anchor.tsx  post.tsx  timeline.tsx
src/components/forms/: echo.tsx  login.tsx
src/components/ui/: dropdown-menu.tsx  form.tsx  input.tsx
src/lib/: emoji.ts
src/utils/supabase/: client.ts  index.ts  server.ts  types.ts
